[gd_scene load_steps=4 format=3 uid="uid://cgkqug7h0cxnj"]

[ext_resource type="Script" uid="uid://dtbeqk1cfw14k" path="res://common/ui/load_menu/load_menu.gd" id="1_dxods"]
[ext_resource type="FontFile" uid="uid://4jqjadkmkcyr" path="res://common/ui/fonts/yoster.ttf" id="2_614ur"]
[ext_resource type="StyleBox" uid="uid://voq2gm207n4n" path="res://common/ui/start_menu/Transparent.tres" id="3_susa0"]

[node name="load_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dxods")

[node name="Highlight" type="ReferenceRect" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -526.0
offset_bottom = -274.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.993377, 1.01097)
border_color = Color(1, 1, 1, 1)
border_width = 2.0
editor_only = false

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.147672, 0.147672, 0.147672, 0.901961)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.89059, 0.89059, 0.89059, 1)
theme_override_fonts/font = ExtResource("2_614ur")
theme_override_font_sizes/font_size = 48
text = "Load Game



"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 250

[node name="Save 1" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_614ur")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = ExtResource("3_susa0")
theme_override_styles/disabled_mirrored = ExtResource("3_susa0")
theme_override_styles/disabled = ExtResource("3_susa0")
theme_override_styles/hover_pressed_mirrored = ExtResource("3_susa0")
theme_override_styles/hover_pressed = ExtResource("3_susa0")
theme_override_styles/hover_mirrored = ExtResource("3_susa0")
theme_override_styles/hover = ExtResource("3_susa0")
theme_override_styles/pressed_mirrored = ExtResource("3_susa0")
theme_override_styles/pressed = ExtResource("3_susa0")
theme_override_styles/normal_mirrored = ExtResource("3_susa0")
theme_override_styles/normal = ExtResource("3_susa0")
text = "Save 1"

[node name="Save 2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_614ur")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = ExtResource("3_susa0")
theme_override_styles/disabled_mirrored = ExtResource("3_susa0")
theme_override_styles/disabled = ExtResource("3_susa0")
theme_override_styles/hover_pressed_mirrored = ExtResource("3_susa0")
theme_override_styles/hover_pressed = ExtResource("3_susa0")
theme_override_styles/hover_mirrored = ExtResource("3_susa0")
theme_override_styles/hover = ExtResource("3_susa0")
theme_override_styles/pressed_mirrored = ExtResource("3_susa0")
theme_override_styles/pressed = ExtResource("3_susa0")
theme_override_styles/normal_mirrored = ExtResource("3_susa0")
theme_override_styles/normal = ExtResource("3_susa0")
text = "Save 2
"

[node name="Save 3" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_614ur")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = ExtResource("3_susa0")
theme_override_styles/disabled_mirrored = ExtResource("3_susa0")
theme_override_styles/disabled = ExtResource("3_susa0")
theme_override_styles/hover_pressed_mirrored = ExtResource("3_susa0")
theme_override_styles/hover_pressed = ExtResource("3_susa0")
theme_override_styles/hover_mirrored = ExtResource("3_susa0")
theme_override_styles/hover = ExtResource("3_susa0")
theme_override_styles/pressed_mirrored = ExtResource("3_susa0")
theme_override_styles/pressed = ExtResource("3_susa0")
theme_override_styles/normal_mirrored = ExtResource("3_susa0")
theme_override_styles/normal = ExtResource("3_susa0")
text = "Save 3"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Save 1" to="." method="_on_save_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Save 2" to="." method="_on_save_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Save 3" to="." method="_on_save_3_pressed"]
